- Home: Fix warning alignment - Home: Fix "fork me" link position

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -302,3 +302,6 @@
   height: 108px;
 }
 
+.no-margin {
+  margin: 0 !important;
+}
